--- a/Bidayat/main_app/templates/main_app/messages_list.html
+++ b/Bidayat/main_app/templates/main_app/messages_list.html
@@ -9,7 +9,7 @@
     <div class="row valign-wrapper">
       <div class="col s2">
         {% load static %}
-        <img src="{%  static 'images/user.jpg' %}" class="circle responsive-img"> <!-- notice the "circle" class -->
+        <img alt="" src="{%  static 'images/user.jpg' %}" class="circle responsive-img"> 
       </div>
       <div class="col s10">
         <table>
