--- a/Bidayat/main_app/templates/detail/user_update.html
+++ b/Bidayat/main_app/templates/detail/user_update.html
@@ -4,13 +4,9 @@
 {% load static %}
 
 
-
-
-
-<div>
+<div class="profile-box reveal">
   {%load static %}
-  <img width="100px" height="100px" src="{% static profile.image|cut:'main_app/static/' %}" alt=""/>
-</div>
+  <div class="editprofile-img" ><img width="50%" src="{% static profile.image|cut:'main_app/static/' %}" alt=""/></div>
 
 
 
@@ -19,19 +15,41 @@
   {{ user_form.as_p }}
 
 
- 
-  
 
 
   <div class="form-group">
-    <label for="id_file">File Upload:</label>
+    <p  for="id_file">File Upload:</p>
     <input type="file" name="file" id="id_file">
   </div>
   <p><a href="{% url 'password_reset' %}">Forgot Password?</a></p>
+  <div class="editprofile-img" >
   <input type="submit" class="btn" value="Update">
-  <a href="{% url 'user_detail' user.id %}">Cancel</a>
+  <button class="btn"<a href="{% url 'user_detail' user.id %}">Cancel</a></button></div>
 
 </form>
+</div>
+<style>
+  .profile-box {
+    background-color: #0F202A;
+    color: white;
+    text-align: left;
+    justify-content: center;
+    width: 50%;
+    margin: auto;
+    font-size: 22px;
+    padding: 2.7%;
+    margin-bottom: 5%;
+  }
+
+  .editprofile-img{
+    text-align: center;
+    margin: auto;
+  }
+
+
+
+</style>
+
 <script>
   let typeFile = document.getElementById('id_type')
   M.FormSelect.init(typeFile)
