--- a/Bidayat/main_app/templates/main_app/messages_confirm_delete.html
+++ b/Bidayat/main_app/templates/main_app/messages_confirm_delete.html
@@ -2,13 +2,26 @@
 
 {% block content %}
 
-<h1>Delete Message</h1>
-<h4>Are you sure you want to delete the message? </h4>
+<div class="delete-box">
+<p>Are you sure you want to delete the message? </p>
 
 <form action="" method="post">
 {% csrf_token %}
-<input type="submit" value="Delete">
-<a href="{% url 'message_detail' messages.id %}">Cancel </a>
+<input type="submit" value="Yes" class="btn">
+<button class="btn"><a href="{% url 'message_detail' messages.id %}">Cancel </a></button>
 </form>
+</div>
+<style>
 
+  .delete-box {
+    background-color: white;
+    margin: auto;
+    width: 30%;
+    justify-content: center;
+    text-align: center;
+    padding: 5%;
+    font-size: 20px;
+    margin-top: 7%;
+  }
+</style>
 {% endblock %}
