--- a/Bidayat/main_app/templates/main_app/work_confirm_delete.html
+++ b/Bidayat/main_app/templates/main_app/work_confirm_delete.html
@@ -2,14 +2,29 @@
 
 {% block content %}
 
-<h1> Delete Work </h1>
 
-<h4>Delete <span class="teal-text"> {{ object.name }} </span>?</h4>
+<div class="delete-box">
+<p>Are you sure you want to delete this work <span class="teal-text"> {{ object.name }} </span>?</p>
 
 <form action="" method="POST">
   {% csrf_token %}
   <input type="submit" value="Yes" class="btn">
-  <a href="{% url 'workdetail' work.id %}">Cancel</a>
+  <button class="btn"><a href="{% url 'workdetail' work.id %}">Cancel</a></button>
 </form>
+</div>
+
+
+<style>
+  .delete-box {
+    background-color: white;
+    margin: auto;
+    width: 30%;
+    justify-content: center;
+    text-align: center;
+    padding: 5%;
+    font-size: 20px;
+    margin-top: 7%;
+  }
+</style>
 
 {% endblock %}
