--- a/Bidayat/main_app/templates/message/detail.html
+++ b/Bidayat/main_app/templates/message/detail.html
@@ -17,9 +17,11 @@
 <p>{{message.id}}</p>
 </div>
 <div class="card-action">
+  {% if message.reply == False %}
   <a href="{% url 'message_update' message.id %}" class="btn-floating pulse"><i class="material-icons">edit</i></a>
   <a href="{% url 'message_delete' message.id %}" class="btn-floating pulse"><i class="material-icons">delete</i></a>
   <a href="{% url 'message_reply'  message.sender.id message.id %}" class="btn-floating pulse"><i class="material-icons">reply</i></a>
+  {% endif %}
 </div>
 
 
