added notification to the messgae;

--- a/Bidayat/main_app/templates/base.html
+++ b/Bidayat/main_app/templates/base.html
@@ -31,7 +31,7 @@
         {% if request.user.is_authenticated %}
         <div class="mydropdown"><button class="mydropbtn"><a href="{% url 'user_detail' user.id %}">Profile</button></a></div>
         <div class="mydropdown"><button class="mydropbtn"><a href="{% url 'works_create' %}">Add Work</button></a></div>
-        <div class="mydropdown"><button class="mydropbtn"><a href="{% url 'message_index' %}">Messages {{messages}} </button></a></div> 
+        <div class="mydropdown"><button class="mydropbtn"><a href="{% url 'message_index' %}"><span class="new badge" style="background-color: rgb(160, 122, 26);">{{messages}}</span>Messages</button></a></div> 
         <div class="mydropdown"><button class="mydropbtn"><a href="{% url 'logout' %}"> Log Out </button></a></div>
         <!-- <a href="#!" class="collection-item"><span class="new badge">4</span></a> -->
   
