--- a/Bidayat/main_app/templates/registration/signup.html
+++ b/Bidayat/main_app/templates/registration/signup.html
@@ -2,8 +2,6 @@
 
 {% block content %}
 
-<!-- <h1>Sign Up</h1> -->
-
 {% if error_message %}
 <p class="red_text">{{error_message}} </p>
 {% endif %}
@@ -21,31 +19,180 @@
 
 
 
-<div class="signup-page">
-<div class="signup-cont">
-  <div class="form-cont">
-<form action="{% url 'signup' %}" enctype="multipart/form-data" method="POST">
-  {% csrf_token %}
+<div id="popupContainer" class="popup">
+  <div class="popup-content">
+      <span class="close" id="closeButton">&times;</span>
+      <p>Tell us more about yourself !</p>
+      <button class="btn" id="customerButton">Customer</button>
+      <button class="btn" id="vendorButton">Vendor</button>
+  </div>
+</div>
+
+
+<div id="customerFormContainer" class="popup customerpopup">
+  <div class="popup-content">
+      <span class="close" id="customerCloseButton">&times;</span>
+
+      <p>Customer Signup Form</p>
+
+        <div class="signup-cont">
+          <div class="form-cont">
+      <form action="{% url 'signup' %}" enctype="multipart/form-data" method="POST">
+        {% csrf_token %}
+        {{form.username.label}} {{form.username}}
+        {{form.email.label}} {{form.email}}
+        {{form.password1.label}} {{form.password1}}
+        {{form.password2.label}} {{form.password2}}
+        {{ profileForm.as_p }}
+        <input type="submit" class="btn" value="Signup">
+      </form>
+    </div>
+      <div class="form-img"><img src="https://i.postimg.cc/fRdR6n0r/photo-1525772764200-be829a350797.jpg" class="form-image" ></div>
+    </div>
+
+  </div>
+</div>
+
+
+<div id="vendorFormContainer" class="popup">
+  <div class="popup-content">
+      <span class="close" id="vendorCloseButton">&times;</span>
+
+      <p>Vendor Signup Form</p>
+      <form action="{% url 'signup' %}" enctype="multipart/form-data" method="POST">
+        {% csrf_token %}
+        {{form.username.label}} {{form.username}}
+        {{form.email.label}} {{form.email}}
+        {{form.password1.label}} {{form.password1}}
+        {{form.password2.label}} {{form.password2}}
+        {{ vendorForm.as_p }}
+        <input type="submit" class="btn" value="Signup">
+      </form>
+   
+    
+
+  </div>
+</div>
+
+<style>
+
+  .popup {
+      display: none;
+      position: fixed;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      border: 1px solid #ccc;
+      background-color: white;
+      padding: 20px;
+      box-sizing: border-box;
+      z-index: 1;
+      max-height: 80vh; 
   
+      margin-top: 10%;
+      text-align: center;
+      justify-content: center;
+      font-size: 22px;
+      padding: 2%;
+      width: 30%;
+      margin-bottom: 22%;
+  }
 
-  {{ form.as_p }}
+
+  .close {
+      color: #aaa;
+      float: right;
+      font-size: 28px;
+      font-weight: bold;
+  }
+
+  .close:hover,
+  .close:focus {
+      color: black;
+      text-decoration: none;
+      cursor: pointer;
+  }
 
 
-  {{ profileForm.as_p }}
+  .popup-content {
+      text-align: center;
+  }
+  
+  .customerpopup{
+  width: 80%;
+  margin: 7%;
+  padding: 0;
+ 
+}
 
-  <input type="submit" class="btn" value="Signup">
-</form>
-</div>
-<div class="form-img"><img src="https://i.postimg.cc/fRdR6n0r/photo-1525772764200-be829a350797.jpg" class="form-image" ></div>
-</div>
-</div>
+</style>
 
 
 <script>
   
-let typeFile = document.getElementById('id_type')
+
+
+  let typeFile = document.getElementById('id_type')
 M.FormSelect.init(typeFile)
 let serviceFile = document.getElementById('id_service')
 M.FormSelect.init(serviceFile)
+
+
+  var popupContainer = document.getElementById('popupContainer');
+  var closeButton = document.getElementById('closeButton');
+
+  var customerButton = document.getElementById('customerButton');
+  var vendorButton = document.getElementById('vendorButton');
+
+  var customerFormContainer = document.getElementById('customerFormContainer');
+  var vendorFormContainer = document.getElementById('vendorFormContainer');
+
+  var customerCloseButton = document.getElementById('customerCloseButton');
+  var vendorCloseButton = document.getElementById('vendorCloseButton');
+
+ 
+  closeButton.onclick = function () {
+      popupContainer.style.display = 'none';
+  };
+
+  customerButton.onclick = function () {
+      customerFormContainer.style.display = 'block';
+      popupContainer.style.display = 'none';
+  };
+
+  vendorButton.onclick = function () {
+      vendorFormContainer.style.display = 'block';
+      popupContainer.style.display = 'none';
+  };
+
+  customerCloseButton.onclick = function () {
+      customerFormContainer.style.display = 'none';
+  };
+
+  vendorCloseButton.onclick = function () {
+      vendorFormContainer.style.display = 'none';
+  };
+
+
+  window.onload = function () {
+      popupContainer.style.display = 'block';
+  };
+
+  
+  window.onclick = function (event) {
+      if (event.target == popupContainer) {
+          popupContainer.style.display = 'none';
+      }
+
+      if (event.target == customerFormContainer) {
+          customerFormContainer.style.display = 'none';
+      }
+
+      if (event.target == vendorFormContainer) {
+          vendorFormContainer.style.display = 'none';
+      }
+  };
+  
+
 </script>
 {% endblock %}
