--- a/Bidayat/main_app/templates/registration/popup.html
+++ b/Bidayat/main_app/templates/registration/popup.html
@@ -7,7 +7,7 @@
   <a href="{%  url 'customer' %}">  Customer  </a>
   <br>
   <br>
-  <a href="{%  url 'vendor' %}" > Vendor   </a>
+  <button class="btn"><a href="{%  url 'vendor' %}" > Vendor   </a></button>
 </div>
 
 
