--- a/Bidayat/main_app/templates/works/categoryworks.html
+++ b/Bidayat/main_app/templates/works/categoryworks.html
@@ -16,7 +16,7 @@
 
 
   <div class="container">
-    <div class="row">
+
       {% for work in works %}
      
         <div class="card reveal">
@@ -39,7 +39,7 @@
         </div>
 
       {% endfor %}
-    </div>
+ 
   </div>
 
 
@@ -47,6 +47,7 @@
     .container {
       margin-top: 3%;
       margin-bottom: 5%;
+    
   
     }
     .image-container {
@@ -58,10 +59,7 @@
 
     }
 
-    .row {
-      display: flex;
-      
-    }
+
 
     .image-slider {
       display: flex;
@@ -84,20 +82,23 @@
       background-color: #F5F5F3;
       display: inline-block;
       margin: auto;
+      margin-bottom: 5%;
     }
 
     .card a{
       color: black;
     }
 
+    
+
 
   </style>
   <script>
-    const imageSlider = document.querySelectorAll('.image-slider');
+    let imageSlider = document.querySelectorAll('.image-slider');
     imageSlider.forEach(slider => {
       let imageIndex = 0;
-      const images = slider.querySelectorAll('.card-img');
-      const imageWidth = images[0].clientWidth;
+      let images = slider.querySelectorAll('.card-img');
+      let imageWidth = images[0].clientWidth;
 
       slider.addEventListener('click', () => {
         imageIndex = (imageIndex + 1) % images.length;
