--- a/Bidayat/main_app/templates/registration/vendor.html
+++ b/Bidayat/main_app/templates/registration/vendor.html
@@ -11,7 +11,14 @@
 <form action="{% url 'vendor' %}" enctype="multipart/form-data" method="POST">
   {% csrf_token %}
   {{ form.as_p }}
-  {{ profileForm.as_p }}
+  <label>User image:</label>
+  {{profileForm.image}}
+  <br><br>
+  <label>Service:</label>
+  {{profileForm.service}}
+  <br>
+  <label>360 view link:</label>
+  {{profileForm.view}}
 
   <input type="submit" class="btn" value="Signup">
 </form>
