details page designed and form font color fixed

--- a/Bidayat/main_app/static/css/style.css
+++ b/Bidayat/main_app/static/css/style.css
@@ -233,7 +233,7 @@ label{
 
 label{
   font-family: Audery-Normal;
-  color: black!important;
+  
   font-size: 19px;
 }
 /* Signup Form Ends here */
@@ -553,3 +553,11 @@ label{
 
 
 /* Ctaegory Work Page endss here */
+
+.checkform {
+  color: black;
+}
+
+.checkform label {
+  color: black;
+}
