--- a/Bidayat/main_app/templates/base.html
+++ b/Bidayat/main_app/templates/base.html
@@ -30,7 +30,9 @@
         </div>
         {% if request.user.is_authenticated %}
         <div class="mydropdown"><button class="mydropbtn"><a href="{% url 'user_detail' user.id %}">Profile</button></a></div>
+        {% if user_type == 'V'%}
         <div class="mydropdown"><button class="mydropbtn"><a href="{% url 'works_create' %}">Add Work</button></a></div>
+        {% endif %}
         <div class="mydropdown"><button class="mydropbtn"><a href="{% url 'message_index' %}">Messages {{messages}} </button></a></div> 
         <div class="mydropdown"><button class="mydropbtn"><a href="{% url 'logout' %}"> Log Out </button></a></div>
         <!-- <a href="#!" class="collection-item"><span class="new badge">4</span></a> -->
@@ -45,35 +47,81 @@
 
         
 
-        <style>
-          .popup {
-            display: none;
-            position: fixed;
-            top: 50%;
-            left: 50%;
-            transform: translate(-50%, -50%);
-            border: 1px solid #ccc;
-            background-color: #f9f9f9;
-            padding: 4%;
-            font-size: 22px;
-            text-align: center;
-            justify-content: center;
-            z-index: 1;
-        }
-        </style>
-        
-        
-        <script>
-        popupButton.onclick = function () {
-            popupContainer.style.display = 'block';
-        };
-        
-        closeButton.onclick = function () {
-            popupContainer.style.display = 'none';
-        };
-        
-        </script>
+       <style>
 
+
+        .popup {
+              display: none;
+              position: fixed;
+              top: 50%;
+              left: 50%;
+              transform: translate(-50%, -50%);
+              border: 1px solid #ccc;
+              background-color: white;
+              padding: 20px;
+              box-sizing: border-box;
+              z-index: 1;
+              max-height: 80vh; 
+              overflow-y: auto;
+              margin: auto;
+             
+              text-align: center;
+              justify-content: center;
+              font-size: 22px;
+              padding: 2%;
+              width: 30%;
+          
+          }
+        
+        
+          .close {
+              color: #aaa;
+              float: right;
+              font-size: 28px;
+              font-weight: bold;
+          }
+        
+          .close:hover,
+          .close:focus {
+              color: black;
+              text-decoration: none;
+              cursor: pointer;
+          }
+        
+        
+          .popup-content {
+              text-align: center;
+          }
+          
+        
+              </style>
+              
+              
+              <script>
+              
+              document.addEventListener('DOMContentLoaded', function () {
+            let popupButton = document.getElementById('popupButton')
+            let closeButton = document.getElementById('closeButton')
+        
+            popupButton.onclick = function () {
+                popupContainer.style.display = 'block'
+            }
+        
+            closeButton.onclick = function () {
+                popupContainer.style.display = 'none'
+            }
+        })
+              
+              </script>
+        
+        <div id="popupContainer" class="popup">
+          <div class="popup-content">
+              <span class="close" id="closeButton"> X </span>
+              <p>Tell us more about yourself:</p>
+             <button ><a href="{% url 'customer' %}"> Customer </a></button> 
+             <button > <a href="{% url 'vendor' %}"> Vendor </a></button> 
+          </div>
+        </div>
 
         {% endif %}
       </div> 
@@ -83,14 +131,7 @@
 
   </header>
   <main>
-    <div id="popupContainer" class="popup">
-      <div class="popup-content">
-          <span class="close" id="closeButton">&times;</span>
-          <p>Tell us more about yourslef:</p>
-          <button class="btn"><a href="{% url 'customer' %}"> Customer </a></button> 
-         <button class="btn"><a href="{% url 'vendor' %}"> Vendor </a></button> 
-      </div>
-  </div>
+
     {% block content %}
 
     {% endblock %}
