--- a/Bidayat/main_app/templates/registration/login.html
+++ b/Bidayat/main_app/templates/registration/login.html
@@ -12,7 +12,7 @@
     <div class="login-cont">
       <div class="form-cont">
 
-  <form method="POST" action="{% url 'login' %}">
+  <form method="POST" action="{% url 'login' %}" class="checkform">
     {% csrf_token %}
     {{ form.as_p }}
     <input type="submit" class="btn" value="Login">
